------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

February 01 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Mellis now exchanges maximum of 5 items

January 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Chests can be offered now
		
January 28 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected an odd bug caused by RNG inlining
	* Atavus's pray effect tweaked a little

January 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Small typo in elite guard's talk corrected.
	* Atavus healing bodyparts works now
	
January 27 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Shattering bottles with poison cause less damage to player.  
	* Healing potions give always one random missing bodypart.
	
January 23 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Eating in cathedral and shop prohibited again (I found or made and found this bug)
	* Kicking items in certain rooms requires saying Yes to a bool question. 

January 19 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Explosions are now stopped by walls
	* Added PLAYER macro which expands to game::GetPlayer()
	* Removed the 3 letter limit of DefaultName, too

January 19 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Fountains should never give permanent lycanthropy-state.
	* Nefas shouldn't confuse plants. (maybe they should hit randomly characters around them)
	* Healing should be terminated if player enters faint state.
	* Remove the 3 letter limit for names.
	* Amulet of Life saving generates high score entry.
	
January 18 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Lycanthropy cannot be randomly activated anymore. 
	
January 18 2003 Timo Kiviluoto <sonor@phpoint.fi>
