@@ -7,6 +7,11 @@ is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
 
+February 02 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Space is also accepted as enter-key in scroll bar questions
+	* . = keypads 5 in direction questions
+	
 February 01 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Mellis now exchanges maximum of 5 items
